--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-#xcode specific
+## xcode specific
 
 build/*
 *.pbxuser
@@ -8,8 +8,10 @@ build/*
 *.perspectivev3
 *~.nib
 
-#ignore private workspace stuff added by Xcode4
+## ignore private workspace stuff added by Xcode4
 *.xcuserstate\nproject.xcworkspace
+*.xcodeproj/xcuserdata/
+*.xcodeproj/project.xcworkspace/
 
 ## generic files to ignore
 *.lock
